--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-responsive-navbar": "^1.0.11",
-    "react-scripts": "1.1.4"
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "save": "^2.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
