--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-responsive-navbar": "^1.0.11",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^1.1.5",
     "save": "^2.3.2"
   },
   "scripts": {
